partes de ejercicio3

--- a/ejercicio3/index.html
+++ b/ejercicio3/index.html
@@ -11,7 +11,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./js/app.js"></script>
+    <input type="text" class="form-control ipunt-detarea">
+    <a class="btn btn-success text-center" href=""> ingrese su tarea</a>
+
 </body>
+<script src="./js/app.js"></script>
 
 </html>
