--- a/ejercicio3/index.html
+++ b/ejercicio3/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="Maximiliano A. Gomez">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>ejercicio3</title>
 </head>
 <body>
-    <input type="text" class="form-control ipunt-detarea">
-    <a class="btn btn-success text-center" href=""> ingrese su tarea</a>
+  <div class="container">
+    <h1 class="text-center my-3">Lista De Tareas</h1>
+    <div class="input-group mb-3">
+      <input type="text" id="inpunt-tarea" class="form-control my-3" placeholder="Ingrese una tarea">
+      <div class="input-group-append">
+        <button id="btn-agregar" class="btn btn-primary my-3">Agregar tarea</button>
+      </div>
+    </div>
+    <ul id="List" class="list-group task-list">
+    </ul>
+  </div>
 
 </body>
 <script src="./js/app.js"></script>
-
 </html>
