termine reloj y corregi algo del ejercicio3

--- a/ejercicio3/index.html
+++ b/ejercicio3/index.html
@@ -16,7 +16,7 @@
         <button id="btn-agregar" class="btn btn-primary my-3">Agregar tarea</button>
       </div>
     </div>
-    <ul id="List" class="list-group task-list">
+    <ul id="List" class="list-group ">
     </ul>
   </div>
 
