--- a/ejercicio4/index.html
+++ b/ejercicio4/index.html
@@ -8,10 +8,17 @@
     <meta name="author" content="Maximiliano A. Gomez">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <script src="./js/app.js"></script>
+    <div  class="reloj container">
+        <p class="fecha"></p>
+        <p class="tiempo"></p>
+    </div>
 </body>
+<script src="./js/app.js"></script>
 
 </html>
