cambios de palabras

--- a/ejercicio1/index.html
+++ b/ejercicio1/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <div class="container my-3">
+  <body >
+    <div class="container my-3 ">
       <div class="row">
-        <p>Bienvenido al juego del Numero magico</p>
-       <a class="btn btn-primary" href="./pages/salaGame.html">Comenzar Juego</a>
+        <p class=" text-center my-3 text-light">Bienvenido al juego del Numero magico</p>
+       <a class="btn btn-primary my-4 buton" href="./pages/salaGame.html">Comenzar Juego</a>
+      
       </div>
     </div>
 
