--- a/ejercicio1/pages/salaGame.html
+++ b/ejercicio1/pages/salaGame.html
@@ -8,8 +8,12 @@
     <title>Juego</title>
 </head>
 <body>
-    <input type="number" class="form-control input-juego">
-    <button class="btn btn-success btn-juego">Adivinar!</button>
+    <div class=" container text-center my-4">
+        <p><h1 class="text-light"> Ingrese un numero del 0 al 50 </h1></p>
+        <input type="number" class="form-control input-juego">
+        <button class="btn btn-success  buton btn-juego my-5">Adivinar!</button>
+
+    </div>
 </body>
 <script src="../js/app.js"></script>
 </html>
